<resources>
    <string name="app_name">LayoutAssignment</string>
    <string name="scan_chip">Scan</string>
    <string name="top_up_chip">Top Up</string>
    <string name="send_chip">Send</string>
    <string name="request_chip">Request</string>
    <string name="toggle_no_discount">NO DISCOUNT</string>
    <string name="toggle_discount">DISCOUNT</string>
    <string name="pulsa_amp_data"><![CDATA[Pulsa & Data]]></string>
    <string name="bonus_pulsa_50">Bonus pulsa 50%</string>
    <string name="buy_now">BUY NOW</string>
    <string name="invoice">INVOICE</string>
    <string name="calculate_total_btn">calculate total</string>
    <string name="calculate_total_text_view">Total:</string>
    <string name="_00_00">$ 0.00</string>
    <string name="dollar_symbol">$</string>
    <string name="electric">Electric</string>
    <string name="cashout">Cashout</string>
    <string name="games">Games</string>
    <string name="see_all">See All</string>
    <string name="product01">Product 01</string>
    <string name="product02">Product 02</string>
    <string name="product03">Product 03</string>
    <string name="product04">Product 04</string>
    <string name="refresh">Refresh</string>
    <string name="inactive">Sorry, this element is inactive due to a lack of funding..</string>
    <string name="zero_value_warning">No product costs added or no products selected..</string>
</resources>