<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200">

    <!-- TODO 01. Define the layout for the MainActivity here. -->
    <!-- NOTE: Remember that in order to include some GUI components you will have to use the Material library -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipScan"
                style="@style/Chip.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="1dp"
                android:text="@string/scan_chip"
                app:chipIcon="@drawable/ic_center_focus_weak_chip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/chip5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTopUp"
                style="@style/Chip.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="1dp"
                android:text="@string/top_up_chip"
                app:chipIcon="@drawable/ic_add_circle_outline_chip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/chip6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/chip4" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSend"
                style="@style/Chip.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="1dp"
                android:text="@string/send_chip"
                app:chipIcon="@drawable/ic_open_in_new_chip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/chip7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/chip5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipRequest"
                style="@style/Chip.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="1dp"
                android:text="@string/request_chip"
                app:chipIcon="@drawable/ic_open_in_new_rotated_chip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/chip6" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBuyNow"
            style="@style/CardView.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="2sp"
            app:cardElevation="8sp"

            app:contentPadding="8sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/toggleGroupDiscount"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewBuyNow">

            <!--            <com.google.android.material.button.MaterialButtonToggleGroup app:singleSelection="true">-->

            <!--                <com.google.android.material.button.MaterialButton-->
            <!--                    android:id="@+id/textButton2"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Text button 2">-->

            <!--                </com.google.android.material.button.MaterialButton>-->
            <!--                <Button-->
            <!--                    android:id="@+id/button7"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Button7" />-->
            <!--                <Button-->
            <!--                    android:id="@+id/button8"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Button8" />-->
            <!--                <Button-->
            <!--                    android:id="@+id/button9"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Button9" />-->
            <!--            </com.google.android.material.button.MaterialButtonToggleGroup>-->

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_button_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNoDiscount"
                    style="@style/Button.Blue.Group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_no_discount" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDiscount"
                    style="@style/Button.Blue.Group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_discount" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewInvoice"
            style="@style/CardView.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="2sp"
            app:cardElevation="8sp"

            app:contentPadding="8sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleGroupDiscount" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/total_group"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewInvoice">

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Blue.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_total_btn" >



            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_total_text_view">



            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>